Add style to page

--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memory Game</title>
+    <title>Memory Game by Giselle Chacon</title>
     <link rel="stylesheet" href="style.css"></link>
     <script src="app.js" charset="utf-8"></script>
 </head>
 <body>
-        <h3>Score: <span id="result"></span></h3>
 
+    <div class="logo"><h1>MEMORY GAME</h1></div>
+    <div><h3>SCORE: <span id="result"></span></h3></div>
+    <div style="width: 100%; align-items:  center;">
         <div class="grid"></div>
+    </div>
+
+    
+    <footer>
+        <a>By Giselle Chacon</a>
+    </footer>
+
 </body>
 </html>
