--- a/index.html
+++ b/index.html
@@ -11,16 +11,20 @@
     <script src="app.js" charset="utf-8"></script>
 
     <audio id="clip1">
-        <source src="audio/green.mp3"></source>
+        <source src="audio/green.mp3">
+        </source>
     </audio>
     <audio id="clip2">
-        <source src="audio/red.mp3"></source>
+        <source src="audio/red.mp3">
+        </source>
     </audio>
     <audio id="clip3">
-        <source src="audio/yellow.mp3"></source>
+        <source src="audio/yellow.mp3">
+        </source>
     </audio>
     <audio id="clip4">
-        <source src="audio/blue.mp3"></source>
+        <source src="audio/blue.mp3">
+        </source>
     </audio>
 </head>
 
@@ -48,47 +52,52 @@
     <!-- Page header -->
     <header class="page-header header container-fluid">
         <div class="description">
-            <h1>ARCADE GAMES</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante
-                luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis. Suspendisse consectetur mi id
-                libero fringilla, in pharetra sem ullamcorper.</p>
-            <button class="btn btn-outline-secondary btn-lg">Play!</button>
+            <h1>MEMORY GAMES</h1>
+            <p>Playing memory games has many unique benefits, and there are many to play, kids and adults can strengthen their muscle
+                memory, sharpen their analytical thinking skills, learn patience, improve focus and much more.</p>
+                <p>
+                <a href="#memory-game" class="btn btn-dark my-2">Play Memory Card</a>
+                <a href="#simon-game" class="btn btn-dark my-2">Play Simon</a>
+            </p>
         </div>
     </header>
     <!-- Memory game -->
-    
-        <div id="memory-game" class="container-fluid">
-            <div>
-                <h2>MEMORY GAME</h2>
-                <h3>SCORE: <span id="result"></span></h3>
-            </div>
-            <div>
-                <div class="grid"></div>
-            </div>
+    <div id="memory-game" class="container-fluid">
+        <div>
+            <h2>MEMORY CARD GAME</h2>
+            <h3>SCORE: <span id="result"></span></h3>
         </div>
+        <div>
+            <div class="grid"></div>
+        </div>
+    </div>
 
-        <!-- Simon game -->
-        <div id="outer-circle">
-            <div id="top-left"></div>
-            <div id="top-right"></div>
-            <div id="bottom-left"></div>
-            <div id="bottom-right"></div>
-            <div id="inner-circle">
-                <h2>SIMON</h2>
-                <div id="switches">
-                    <input type="checkbox" class="toggle" id="on">
-                    <button class="button" id="start">START</button>
-                    <input type="checkbox" class="toggle" id="strict">
-                </div>
-                <div class="text1">
-                    <span>POWER</span><span>STRICT</span>
-                </div>
-                <div id="turn"></div>
-                <div class="text2">
-                    COUNT
-                </div>
+    <!-- Simon game -->
+    <section id="simon-game" class="container"> 
+        <div>
+            <h2>SIMON</h2>
+        </div>
+    <div id="outer-circle">
+        <div id="top-left"></div>
+        <div id="top-right"></div>
+        <div id="bottom-left"></div>
+        <div id="bottom-right"></div>
+        <div id="inner-circle">
+            <button class="button" id="start">START</button>
+            <div id="switches">
+                <input type="checkbox" class="toggle" id="on">
+                <input type="checkbox" class="toggle" id="strict">
+            </div>
+            <div class="text1">
+                <span>POWER</span><span>STRICT</span>
+            </div>
+            <div id="turn"></div>
+            <div class="text2">
+                COUNT
             </div>
         </div>
+    </div>
+</section>
 
     <!-- Information and get intouch feature -->
     <div class="container features">
@@ -133,13 +142,13 @@
                 <div class="col-lg-4 col-md-4 col-sm-12">
                     <h6 class="text-uppercase font-weight-bold">Contact</h6>
                     <p>Dublin, Ireland
-                        <br/>gisecn@gmail.com.com</p>
+                        <br />gisecn@gmail.com.com</p>
                 </div>
             </div>
             <div class="footer-copyright text-center">© 2020 Copyright: Giselle Chacon</div>
     </footer>
 
-    <!-- Page footer -->
+    <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
