--- a/index.html
+++ b/index.html
@@ -38,123 +38,143 @@
         <div class="collapse navbar-collapse" id="main-navigation">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" onClick="refreshPage()" href="index.html">Refresh Games</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#memory-game">Memory Card</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="#simon-game">Simon</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#footer-contact">Contact</a>
                 </li>
             </ul>
         </div>
     </nav>
     <!-- Page header -->
     <header class="page-header header container-fluid">
-        <div class="description">
-            <h1>MEMORY GAMES</h1>
-            <p>Playing memory games has many unique benefits, and there are many to play, kids and adults can strengthen their muscle
-                memory, sharpen their analytical thinking skills, learn patience, improve focus and much more.</p>
+        <div class="overlay">
+            <div class="description">
+                <h1>MEMORY GAMES</h1>
+                <p>Playing memory games has many unique benefits, and there are many to play, kids and adults can
+                    strengthen their muscle
+                    memory, sharpen their analytical thinking skills, learn patience, improve focus and much more.</p>
                 <p>
-                <a href="#memory-game" class="btn btn-dark my-2">Play Memory Card</a>
-                <a href="#simon-game" class="btn btn-dark my-2">Play Simon</a>
-            </p>
+                    <a href="#memory-game" class="btn btn-dark my-2">Play Memory Card</a>
+                    <a href="#simon-game" class="btn btn-dark my-2">Play Simon</a>
+                </p>
+            </div>
         </div>
     </header>
     <!-- Memory game -->
-    <div id="memory-game" class="container-fluid">
-        <div>
-            <h2>MEMORY CARD GAME</h2>
-            <h3>SCORE: <span id="result"></span></h3>
+    <div id="memory-game" class="container-fluid"></div>
+    <div>
+        <h2>MEMORY CARD GAME</h2>
+    </div>
+    <div class="card bg-transparent border-warning text-center" style="margin: 20px 20px 20px 20px;">
+        <div class="card-body bg-transparent">
+            <h4>SCORE: <span id="result"></span></h4>
+            <div class="grid">
+            </div>
         </div>
-        <div>
-            <div class="grid"></div>
-        </div>
+        <div class="card-footer">
+            <h4>Rules:</h4>
+            <ul class="list-group">
+                <li class="list-group-item list-group-item-dark">Start the game by clicking on any of the cards</li>
+                <li class="list-group-item list-group-item-dark">To win find all the matches</li>
+                <li class="list-group-item list-group-item-dark">Keep trying until you find the all</li>
+                <li class="list-group-item list-group-item-dark">Click refresh games on the navbar to start again</li>
+                <li class="list-group-item list-group-item-dark">Enjoy!</li>
+              </ul>
+          </div>
+    </div>
     </div>
 
     <!-- Simon game -->
-    <section id="simon-game" class="container"> 
+    <section id="simon-game" class="container">
         <div>
             <h2>SIMON</h2>
         </div>
-    <div id="outer-circle">
-        <div id="top-left"></div>
-        <div id="top-right"></div>
-        <div id="bottom-left"></div>
-        <div id="bottom-right"></div>
-        <div id="inner-circle">
-            <button class="button" id="start">START</button>
-            <div id="switches">
-                <input type="checkbox" class="toggle" id="on">
-                <input type="checkbox" class="toggle" id="strict">
-            </div>
-            <div class="text1">
-                <span>POWER</span><span>STRICT</span>
-            </div>
-            <div id="turn"></div>
-            <div class="text2">
-                COUNT
+        <div class="card bg-transparent border-warning text-center" style="margin: 20px 20px 20px 20px;">
+            <div class="card-body bg-transparent">
+                <div id="outer-circle">
+                    <div id="top-left"></div>
+                    <div id="top-right"></div>
+                    <div id="bottom-left"></div>
+                    <div id="bottom-right"></div>
+                    <div id="inner-circle">
+                        <button class="button" id="start">START</button>
+                        <div id="switches">
+                            <input type="checkbox" class="toggle" id="on">
+                            <input type="checkbox" class="toggle" id="strict">
+                        </div>
+                        <div class="text1">
+                            <span>POWER</span><span>STRICT</span>
+                        </div>
+                        <div id="turn"></div>
+                        <div class="text2">
+                            COUNT
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <h4>Rules:</h4>
+                    <ul class="list-group">
+                        <li class="list-group-item list-group-item-dark">Turn on the power by cliking on the check box "power"</li>
+                        <li class="list-group-item list-group-item-dark">Click Start to start the game</li>
+                        <li class="list-group-item list-group-item-dark">For higher dificulty check the "strict" box (no mistakes allow)</li>
+                        <li class="list-group-item list-group-item-dark">Count will keep your score</li>
+                        <li class="list-group-item list-group-item-dark">Click Refresh Games to start again</li>
+                        <li class="list-group-item list-group-item-dark">Enjoy!</li>
+                      </ul>
+                  </div>
             </div>
         </div>
-    </div>
-</section>
-
-    <!-- Information and get intouch feature -->
-    <div class="container features">
-        <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <h3 class="feature-title">Lorem ipsum</h3>
-                <img src="images/column-1.jpg" class="img-fluid">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat
-                    ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <h3 class="feature-title">Lorem ipsum</h3>
-                <img src="images/column-2.jpg" class="img-fluid">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat
-                    ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <h3 class="feature-title">Get in Touch!</h3>
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Name" name="">
-                </div>
-                <div class="form-group">
-                    <input type="email" class="form-control" placeholder="Email Address" name="email">
-                </div>
-                <div class="form-group">
-                    <textarea class="form-control" rows="4"></textarea>
-                </div>
-                <input type="submit" class="btn btn-secondary btn-block" value="Send" name="">
-            </div>
         </div>
-    </div>
+    </section>
 
-    <!-- Page footer -->
-    <footer class="page-footer">
-        <div class="container">
+    <!-- Page footer, information and get intouch feature -->
+    <footer class="page-footer" id="footer-contact">
+        <div class="container features">
             <div class="row">
-                <div class="col-lg-8 col-md-8 col-sm-12">
-                    <h6 class="text-uppercase font-weight-bold">Additional Information</h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis
-                        placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                    <h3 class="feature-title">FUN</h3>
+                    <i class="fas fa-gamepad fa-3x"></i>
+                    <p>Playing memory games is fun for kids and adults</p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12">
-                    <h6 class="text-uppercase font-weight-bold">Contact</h6>
-                    <p>Dublin, Ireland
-                        <br />gisecn@gmail.com.com</p>
+                    <h3 class="feature-title">BRAIN MUSCLE</h3>
+                    <i class="far fa-smile-wink fa-3x"></i>
+                    <p>Playing memory games is good for your brain</p>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                    <h3 class="feature-title">Get in Touch!</h3>
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Name" name="">
+                    </div>
+                    <div class="form-group">
+                        <input type="email" class="form-control" placeholder="Email Address" name="email">
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" rows="4"></textarea>
+                    </div>
+                    <input type="submit" class="btn btn-secondary btn-block" value="Send" name="">
                 </div>
             </div>
-            <div class="footer-copyright text-center">© 2020 Copyright: Giselle Chacon</div>
+        </div>
+        <div class="footer-copyright text-center">© 2020 Copyright: Created by <a href="https://github.com/GiselleNessi">Giselle Chacon</a></div>
     </footer>
 
     <!-- Scripts -->
+    <script src="https://kit.fontawesome.com/bc13f3adc8.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 </body>
 
 </html>
