--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game by Giselle Chacon</title>
+    <!-- Bootstrap 4.1.3 -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="app.js" charset="utf-8"></script>
-
+    <!-- CSS style -->
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <!-- App Javascript -->
+    <script src="js/app.js" charset="utf-8"></script>
+    <!-- EmailJS -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init("user_82QFa7hBZ0VpcOO1lOLOE");
+        })();
+    </script>
+    <!-- Audio files -->
     <audio id="clip1">
         <source src="audio/green.mp3">
         </source>
@@ -31,7 +41,7 @@
 <body>
     <!-- Navbar menu -->
     <nav class="navbar navbar-expand-md">
-        <a class="navbar-brand" href="#">Logo</a>
+        <a class="navbar-brand" href="index.html">MEMORY GAMES</a>
         <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -61,14 +71,14 @@
                     strengthen their muscle
                     memory, sharpen their analytical thinking skills, learn patience, improve focus and much more.</p>
                 <p>
-                    <a href="#memory-game" class="btn btn-dark my-2">Play Memory Card</a>
-                    <a href="#simon-game" class="btn btn-dark my-2">Play Simon</a>
+                    <a href="#memory-game" class="btn btn-dark btn-lg my-2">Play Memory Card</a>
+                    <a href="#simon-game" class="btn btn-dark btn-lg my-2">Play Simon</a>
                 </p>
             </div>
         </div>
     </header>
     <!-- Memory game -->
-    <div id="memory-game" class="container-fluid"></div>
+    <div id="memory-game" class="container-fluid">
     <div>
         <h2>MEMORY CARD GAME</h2>
     </div>
@@ -86,13 +96,14 @@
                 <li class="list-group-item list-group-item-dark">Keep trying until you find the all</li>
                 <li class="list-group-item list-group-item-dark">Click refresh games on the navbar to start again</li>
                 <li class="list-group-item list-group-item-dark">Enjoy!</li>
-              </ul>
-          </div>
+            </ul>
+        </div>
     </div>
     </div>
+</div>
 
     <!-- Simon game -->
-    <section id="simon-game" class="container">
+    <section id="simon-game" class="container-fluid">
         <div>
             <h2>SIMON</h2>
         </div>
@@ -121,14 +132,16 @@
                 <div class="card-footer">
                     <h4>Rules:</h4>
                     <ul class="list-group">
-                        <li class="list-group-item list-group-item-dark">Turn on the power by cliking on the check box "power"</li>
+                        <li class="list-group-item list-group-item-dark">Turn on the power by cliking on the check box
+                            "power"</li>
                         <li class="list-group-item list-group-item-dark">Click Start to start the game</li>
-                        <li class="list-group-item list-group-item-dark">For higher dificulty check the "strict" box (no mistakes allow)</li>
+                        <li class="list-group-item list-group-item-dark">For higher dificulty check the "strict" box (no
+                            mistakes allow)</li>
                         <li class="list-group-item list-group-item-dark">Count will keep your score</li>
                         <li class="list-group-item list-group-item-dark">Click Refresh Games to start again</li>
                         <li class="list-group-item list-group-item-dark">Enjoy!</li>
-                      </ul>
-                  </div>
+                    </ul>
+                </div>
             </div>
         </div>
         </div>
@@ -144,14 +157,15 @@
                     <p>Playing memory games is fun for kids and adults</p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12">
-                    <h3 class="feature-title">BRAIN MUSCLE</h3>
+                    <h3 class="feature-title">BRAIN</h3>
                     <i class="far fa-smile-wink fa-3x"></i>
-                    <p>Playing memory games is good for your brain</p>
+                    <p>Playing memory games is good for your brain muscle</p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12">
                     <h3 class="feature-title">Get in Touch!</h3>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Name" name="">
+                        <form onsubmit="return sendMail(this);">
+                            <input type="text" class="form-control" placeholder="Name" name="">
                     </div>
                     <div class="form-group">
                         <input type="email" class="form-control" placeholder="Email Address" name="email">
@@ -159,14 +173,16 @@
                     <div class="form-group">
                         <textarea class="form-control" rows="4"></textarea>
                     </div>
-                    <input type="submit" class="btn btn-secondary btn-block" value="Send" name="">
+                    <input type="submit" class="btn btn-dark btn-lg" value="Send" name="">
+                    </form>
                 </div>
             </div>
         </div>
-        <div class="footer-copyright text-center">© 2020 Copyright: Created by <a href="https://github.com/GiselleNessi">Giselle Chacon</a></div>
+        <div class="footer-copyright text-center">© 2020 Copyright: Created by <a
+                href="https://github.com/GiselleNessi">Giselle Chacon</a></div>
     </footer>
 
-    <!-- Scripts -->
+    <!-- Scripts, Fontawesome, Bootstrap, Sweet alert JS, Email.JS -->
     <script src="https://kit.fontawesome.com/bc13f3adc8.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -175,6 +191,6 @@
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+    <script src="js/sendEmail.js"></script>
 </body>
-
 </html>
