--- a/index.html
+++ b/index.html
@@ -62,28 +62,29 @@
     </header>
     <!-- Memory game -->
     <div id="memory-game" class="container-fluid">
-    <div>
-        <h2>MEMORY CARD GAME</h2>
-    </div>
-    <div class="card bg-transparent border-warning text-center" style="margin: 20px 20px 20px 20px;">
-        <div class="card-body bg-transparent">
-            <h4>SCORE: <span id="result"></span></h4>
-            <div class="grid">
+        <div>
+            <h2>MEMORY CARD GAME</h2>
+        </div>
+        <div class="card bg-transparent border-warning text-center" style="margin: 20px 20px 20px 20px;">
+            <div class="card-body bg-transparent">
+                <h4>SCORE: <span id="result"></span></h4>
+                <div class="grid">
+                </div>
+            </div>
+            <div class="card-footer">
+                <h4>Rules:</h4>
+                <ul class="list-group">
+                    <li class="list-group-item list-group-item-dark">Start the game by clicking on any of the cards</li>
+                    <li class="list-group-item list-group-item-dark">To win find all the matches</li>
+                    <li class="list-group-item list-group-item-dark">Keep trying until you find the all</li>
+                    <li class="list-group-item list-group-item-dark">Click refresh games on the navbar to start again
+                    </li>
+                    <li class="list-group-item list-group-item-dark">Enjoy!</li>
+                </ul>
             </div>
         </div>
-        <div class="card-footer">
-            <h4>Rules:</h4>
-            <ul class="list-group">
-                <li class="list-group-item list-group-item-dark">Start the game by clicking on any of the cards</li>
-                <li class="list-group-item list-group-item-dark">To win find all the matches</li>
-                <li class="list-group-item list-group-item-dark">Keep trying until you find the all</li>
-                <li class="list-group-item list-group-item-dark">Click refresh games on the navbar to start again</li>
-                <li class="list-group-item list-group-item-dark">Enjoy!</li>
-            </ul>
-        </div>
     </div>
     </div>
-</div>
 
     <!-- Simon game -->
     <!-- Audio files -->
@@ -161,10 +162,19 @@
                     <h3 class="feature-title">Get in Touch!</h3>
                     <div class="center-form">
                         <form onsubmit="return sendMail(this);">
-                            <input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required/>
-                            <input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
-                            <textarea rows="5" name="projectsummary" class="form-control" id="projectsummary" placeholder="Message" required></textarea>
-                            <button type="submit" class="btn btn-dark btn-lg">Message</button>
+                            <div class="form-group">
+                                <input type="text" name="name" class="form-control" id="fullname" placeholder="Name"
+                                    required />
+                            </div>
+                            <div class="form-group">
+                                <input type="text" name="emailaddress" class="form-control" id="emailaddress"
+                                    placeholder="Email" required />
+                            </div>
+                            <div class="form-group">
+                                <textarea rows="5" name="projectsummary" class="form-control" id="gameapp"
+                                    placeholder="Message" required></textarea>
+                                <button type="submit" class="btn btn-dark btn-lg">Send</button>
+                            </div>
                         </form>
                     </div>
                 </div>
@@ -185,4 +195,5 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="js/sendEmail.js"></script>
 </body>
+
 </html>
