--- a/index.html
+++ b/index.html
@@ -83,39 +83,40 @@
         </ul>
     </div>
 
-    <!-- Simon game -->
-    <section class="main"></section>
-    <h2  id="simon">PLAY SIMON</h2>
-   <!-- Game board -->
-   <div id="board">
-    <div id="green" class="color"></div>
-    <div id="red" class="color"></div>
-    <div id="blue" class="color"></div>
-    <div id="yellow" class="color"></div>
-    <div id="center-board">
-        <div class="row">
-            <div class="button-tag">
-                <div id="level" class="score">00</div>
-                <p>LEVEL</p>
-            </div>
-            <div class="button-tag">
-                <div id="highest-level" class="score">00</div>
-                <p>HIGHEST</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="button-tag">
-                <input id="start" class="button" type="button" name="start" value=" ">
-                <p>START</p>
-            </div>
-            <div class="button-tag">
-                <input id="reset" class="button" type="button" name="reset" value=" ">
-                <p>RESET</p>
-            </div>
-        </div>
-    </div>
-</div>
-</section>
+
+       <!-- Simon game -->
+       <section class="main"></section>
+       <h2  id="simon">PLAY SIMON</h2>
+      <!-- Game board -->
+      <div id="board">
+       <div id="green" class="color"></div>
+       <div id="red" class="color"></div>
+       <div id="blue" class="color"></div>
+       <div id="yellow" class="color"></div>
+       <div id="center-board">
+           <div class="row">
+               <div class="button-tag">
+                   <div id="level" class="score">00</div>
+                   <p>LEVEL</p>
+               </div>
+               <div class="button-tag">
+                   <div id="highest-level" class="score">00</div>
+                   <p>HIGHEST</p>
+               </div>
+           </div>
+           <div class="row">
+               <div class="button-tag">
+                   <input id="start" class="button" type="button" name="start" value=" ">
+                   <p>START</p>
+               </div>
+               <div class="button-tag">
+                   <input id="reset" class="button" type="button" name="reset" value=" ">
+                   <p>RESET</p>
+               </div>
+           </div>
+       </div>
+   </div>
+   </section>
         <div class="card-footer">
             <h4>Rules:</h4>
             <ul class="list-group">
@@ -166,6 +167,7 @@
                     </div>
                 </div>
             </div>
+            <footer>
             <div class="footer-copyright text-center">© 2020 Copyright: Created by <a
                     href="https://github.com/GiselleNessi">Giselle Chacon</a></div>
         </footer>
