Add information to README file

--- a/index.html
+++ b/index.html
@@ -142,18 +142,7 @@
     <!-- Page footer, information and get intouch feature -->
     <footer>
     <div class="container features" id="footer-contact">
-        <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <h3 class="feature-title">FUN</h3>
-                <i class="fas fa-gamepad fa-3x"></i>
-                <p>Playing memory games is fun for kids and adults</p>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <h3 class="feature-title">BRAIN</h3>
-                <i class="far fa-smile-wink fa-3x"></i>
-                <p>Playing memory games is good for your brain muscle</p>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
+        
                 <h3 class="feature-title">Get in Touch!</h3>
                 <div class="center-form">
                     <form onsubmit="return sendMail(this);">
@@ -175,6 +164,9 @@
             </div>
         </div>
     </div>
+    <p>
+        <a href="#">Back to top</a>
+      </p>
     <div class="footer-copyright text-center">© 2020 Copyright: Created by <a
             href="https://github.com/GiselleNessi">Giselle Chacon</a></div>
 </footer>
